--- a/bower.json
+++ b/bower.json
@@ -6,18 +6,21 @@
     "Norbert Szucs <szucs.norbert@outlook.com>"
   ],
   "license": "ISC",
-  "homepage": "",
+  "homepage": "https://github.com/sznrbrt/auction-site",
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "public/bower_components"
   ],
   "dependencies": {
     "bootstrap": "^3.3.6",
     "angular": "^1.5.5",
     "angular-bootstrap": "^1.3.2",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "font-awesome": "^4.6.3",
+    "angular-spinner": "^0.8.1"
   }
 }
