--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.15.1",
     "bower": "^1.7.9",
     "cookie-parser": "^1.4.1",
+    "cron": "^1.1.0",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "jsonwebtoken": "^6.2.0",
