--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-bootstrap": "^1.3.2",
     "angular-ui-router": "^0.2.18",
     "font-awesome": "^4.6.3",
-    "angular-spinner": "^0.8.1"
+    "angular-spinner": "^0.8.1",
+    "ngstorage": "^0.3.10"
   }
 }
